--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Set the plugin path
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 run '~/.tmux/plugins/tpm/tpm'
 
