--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,11 +4,11 @@ theme = tokyonight
 background = #0D1017
 
 # Keybinds
-keybind = ctrl+a>minus=new_split:down
-keybind = ctrl+a>backslash=new_split:right
-keybind = ctrl+a>x=close_surface
-keybind = ctrl+a>equal=equalize_splits
-keybind = ctrl+a>up=goto_split:top
-keybind = ctrl+a>down=goto_split:bottom
-keybind = ctrl+a>right=goto_split:right
-keybind = ctrl+a>left=goto_split:left
+keybind = ctrl+s>minus=new_split:down
+keybind = ctrl+s>backslash=new_split:right
+keybind = ctrl+s>x=close_surface
+keybind = ctrl+s>equal=equalize_splits
+keybind = ctrl+s>up=goto_split:top
+keybind = ctrl+s>down=goto_split:bottom
+keybind = ctrl+s>right=goto_split:right
+keybind = ctrl+s>left=goto_split:left
