--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -12,7 +12,8 @@ $java\
 $python\
 $php\
 $rust\
-$jobs $time\
+$jobs\
+$cmd_duration\
 $line_break\
 $character"""
 
@@ -22,30 +23,15 @@ symbol = " "
 [directory]
 truncation_length = 3
 
-[aws]
-format = '\[🌩️ [$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
-
 [c]
 format = '\[📄 [$symbol($version(-$name))]($style)\]'
-
-[cmake]
-format = '\[🛠️ [$symbol($version)]($style)\]'
-
-[cmd_duration]
-disabled = true
-
-[conda]
-format = '\[🐍 [$symbol$environment]($style)\]'
 
 [git_branch]
 format = '[]($style) [$branch ]($style)'
 style = "bold #737aa2" 
 
 [git_status]
-ahead = '⇡${count}'
-diverged = '⇕⇡${ahead_count}⇣${behind_count}'
-behind = '⇣${count}'
-format = '([\[$all_status$ahead_behind\] ]($style))'
+format = '([$all_status$ahead_behind ]($style))'
 style = "bold #737aa2"
 
 [git_metrics]
@@ -72,11 +58,16 @@ format = '[](#41a6b5) [${pyenv_prefix}(${version})(\($virtualenv\))](bold #41
 [rust]
 format = '🦀 [$version]($style)'
 
-[sudo]
-format = '\[[as 🔒 $symbol]($style)\]'
+[jobs]
+symbol = ' '
+style = 'bold #4f76c7'
+number_threshold = 1
+format = '[$symbol]($style)'
 
-[time]
-format = '[$time]($style)'
+[cmd_duration]
+min_time = 500
+style = 'bold #737aa2'
+format = '[$duration]($style)'
 
 [username]
 format = '\[[$user]($style)\] '
